# Encryptedtask

./: README.md  pyproject.toml  requirements.txt
encrypted_task_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
todo/: __main__.py  click_app.py  crypto.py  storage.py
